--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday Goldi">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -51,10 +51,10 @@
     	<h2 style="color:#8377E4;">I</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">.</h2>
+    	<h2 style="color:#99C96A;">❤</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">.</h2>
+    	<h2 style="color:#20CFB4;">❤</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -128,15 +128,6 @@
 				<p>May all your wishes come true</p>
 				<p>Remember</p>
 				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
 				<p>God has your back</p>
 				<p>and</p>
 				<p>this year will be better</p>
@@ -150,7 +141,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday GOLDI RAJ</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
